--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Dustin Marshall
-headshot: "/images/logo.png"
+logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: >
   I've recently completed a master's degree in Computational Analysis and Public 
   Policy (MSCAPP) at the University of Chicago, with coursework in software 
