--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Dustin Marshall
-logo: "/images/logo.png" # your photo (or logo) here
+logo: "/images/logo.png"
 description: >
   I've recently completed a master's degree in Computational Analysis and Public 
   Policy (MSCAPP) at the University of Chicago, with coursework in software 
