--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,19 @@
 title: Dustin Marshall
 logo: "/images/logo.png"
 description: >
-  I've recently completed a master's degree in Computational Analysis and Public 
-  Policy (MSCAPP) at the University of Chicago, with coursework in software 
-  engineering, cloud computing, database management, machine learning, and 
-  econometrics. My professional background is in supporting development economics 
+  I've recently completed a master's degree in <a href="https://capp.uchicago.edu/">
+  Computational Analysis and Public Policy</a> (MSCAPP) at the University of Chicago. 
+  Over the last two years, I've excelled in graduate-level coursework at UChicago in 
+  software engineering, cloud computing, database development, machine learning, and 
+  econometrics.
+  <br><br>
+  During this time, I've worked as a graduate student researcher at the <a 
+  href="https://bfi.uchicago.edu/development-innovation-lab/">Development Innovation 
+  Lab</a> (DIL) under Nobel laureate <a href="https://economics.uchicago.edu/directory/michael-kremer">Michael Kremer</a>, 
+  where I've provided technical support on data science research projects. For the four years prior to grad school, I 
+  supported applied economics and data science research, and leading 
+  data scientists, development economists, and researchers.
+  My professional background is in supporting development economics 
   and data science research to evaluate the impacts of development programs in 
   low- and middle-income countries. 
   <br><br>
