--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,8 @@ description: >
   href="https://bfi.uchicago.edu/development-innovation-lab/">Development Innovation 
   Lab</a> (DIL) under Nobel laureate <a href="https://economics.uchicago.edu/directory/michael-kremer">Michael Kremer</a>, 
   where I've provided technical support on data science research projects. For the four years prior to grad school, I 
-  supported applied economics and data science research, and leading 
-  data scientists, development economists, and researchers.
-  My professional background is in supporting development economics 
-  and data science research to evaluate the impacts of development programs in 
-  low- and middle-income countries. 
+  worked at the Center for Effective Global Action (CEGA) supported applied economics and data science research evaluating the impacts of development programs in 
+  low- and middle-income countries.
   <br><br>
   <a href="https://www.linkedin.com/in/dustin-marshall-b1151184/">View My LinkedIn Profile</a> 
   
