--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,15 @@
 title: Dustin Marshall
 logo: "/images/logo.png"
 description: >
-  I've recently completed a master's degree in <a href="https://capp.uchicago.edu/">
-  Computational Analysis and Public Policy</a> (MSCAPP) at the University of Chicago. 
-  Over the last two years, I've excelled in graduate-level coursework at UChicago in 
-  software engineering, cloud computing, database development, machine learning, and 
-  econometrics.
+  I have a MSc in <a href="https://capp.uchicago.edu/">Computational Analysis and Public Policy</a> 
+  (MSCAPP) from the University of Chicago, where I excelled in advanced coursework in software 
+  engineering, cloud computing, database development, machine learning, and econometrics.
   <br><br>
-  During this time, I've worked as a graduate student researcher at the <a 
-  href="https://bfi.uchicago.edu/development-innovation-lab/">Development Innovation 
-  Lab</a> (DIL) under Nobel laureate <a href="https://economics.uchicago.edu/directory/michael-kremer">Michael Kremer</a>, 
-  where I've provided technical support on data science research projects. For the four years prior to grad school, I 
-  worked at the Center for Effective Global Action (CEGA) supported applied economics and data science research evaluating the impacts of development programs in 
-  low- and middle-income countries.
+  I've worked as a Summer Associate at the Rockefeller Foundation's Data Science team, a graduate student 
+  researcher in applied data science at the <a href="https://bfi.uchicago.edu/development-innovation-lab/">
+  Development Innovation Lab</a> (DIL) under Nobel laureate <a href="https://economics.uchicago.edu/directory/michael-kremer">
+  Michael Kremer</a>, and prior to graduate school, I worked at the Center for Effective Global Action (CEGA) supporting applied 
+  economics and data science research in low- and middle-income countries.
   <br><br>
   <a href="https://www.linkedin.com/in/dustin-marshall-b1151184/">View My LinkedIn Profile</a> 
   
