--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
 title: Dustin Marshall
 logo: "/images/logo.png"
 description: >
-  I have a MSc in <a href="https://capp.uchicago.edu/">Computational Analysis and Public Policy</a> 
-  (MSCAPP) from the University of Chicago, where I excelled in advanced coursework in software 
-  engineering, cloud computing, database development, machine learning, and econometrics.
+  I have a MSc in <a href="https://capp.uchicago.edu/">Computational Analysis and Public Policy</a> (MSCAPP) from the University of Chicago, 
+  where I excelled in advanced coursework in software engineering, cloud computing, database development, machine learning, and econometrics.
   <br><br>
-  I've worked as a Summer Associate at the Rockefeller Foundation's Data Science team, a graduate student 
-  researcher in applied data science at the <a href="https://bfi.uchicago.edu/development-innovation-lab/">
-  Development Innovation Lab</a> (DIL) under Nobel laureate <a href="https://economics.uchicago.edu/directory/michael-kremer">
-  Michael Kremer</a>, and prior to graduate school, I worked at the Center for Effective Global Action (CEGA) supporting applied 
-  economics and data science research in low- and middle-income countries.
+  My past work experience includes the <a href="https://www.rockefellerfoundation.org/">Rockefeller Foundation</a>'s Data Science Team, the 
+  <a href="https://bfi.uchicago.edu/development-innovation-lab/">Development Innovation Lab</a> (DIL) at UChicago under Nobel laureate <a 
+  href="https://economics.uchicago.edu/directory/michael-kremer">Michael Kremer</a>, and the <a href="https://cega.berkeley.edu/">Center for 
+  Effective Global Action</a> (CEGA) at UC Berkeley.
   <br><br>
   <a href="https://www.linkedin.com/in/dustin-marshall-b1151184/">View My LinkedIn Profile</a> 
   
