remove theme reference

--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@ description: >
   I have a MSc in <a href="https://capp.uchicago.edu/">Computational Analysis and Public Policy</a> (MSCAPP) from the University of Chicago, 
   where I excelled in advanced coursework in software engineering, cloud computing, database development, machine learning, and econometrics.
   <br><br>
-  My past work experience includes the <a href="https://www.rockefellerfoundation.org/">Rockefeller Foundation</a>'s Data Science Team, the 
-  <a href="https://bfi.uchicago.edu/development-innovation-lab/">Development Innovation Lab</a> (DIL) at UChicago under Nobel laureate <a 
-  href="https://economics.uchicago.edu/directory/michael-kremer">Michael Kremer</a>, and the <a href="https://cega.berkeley.edu/">Center for 
-  Effective Global Action</a> (CEGA) at UC Berkeley.
+  I've worked for the <a href="https://bfi.uchicago.edu/development-innovation-lab/">Development Innovation Lab</a> (DIL) at UChicago under 
+  Nobel laureate <a href="https://economics.uchicago.edu/directory/michael-kremer">Michael Kremer</a>, the <a 
+  href="https://www.rockefellerfoundation.org/">Rockefeller Foundation</a>'s Data Science Team, and the <a 
+  href="https://cega.berkeley.edu/">Center for Effective Global Action</a> (CEGA) at UC Berkeley.
   <br><br>
   
 remote_theme: pages-themes/minimal@v0.2.0
