--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,10 @@ title: Dustin Marshall
 logo: "/images/logo.png"
 description: >
   <br>
-  I have a MSc in <a href="https://capp.uchicago.edu/">Computational Analysis and Public Policy</a> (MSCAPP) from the University of Chicago, 
-  where I excelled in advanced coursework in software engineering, cloud computing, database development, machine learning, and econometrics.
+  I have an MSc from UChicago with coursework in advanced statistics, machine learning, and data engineering, plus 7 years of 
+  experience supporting and contributing to the research of industry-leading development economists and data scientists. My technical 
+  expertise is in building data products that apply machine learning, geospatial analysis, and/or natural language processing for 
+  mission-driven organizations.
   <br><br>
   I've worked for the <a href="https://bfi.uchicago.edu/development-innovation-lab/">Development Innovation Lab</a> (DIL) at UChicago under 
   Nobel laureate <a href="https://economics.uchicago.edu/directory/michael-kremer">Michael Kremer</a>, the <a 
