--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@ title: Dustin Marshall
 logo: "/images/logo.png"
 description: >
   <br>
-  Research Engineer focused on building helpful AI applications. BA from UC Berkeley, MSc from UChicago. 8+ yrs of exp in software engineering, data science, and applied economics, with a focus on building data products that leverage large language models to improve data discovery and analysis.
+  Research Engineer with a BA from UC Berkeley and an MSc from UChicago. 8+ yrs of exp in SWE/DS/Econ with a focus on building helpful AI applications.
   <br><br>
-  I'm currently building AskCR with the Innovation Lab at <a href="https://www.consumerreports.org/">Consumer Reports</a>, previously with the <a href="https://collaboration.worldbank.org/content/sites/collaboration-for-development/en/groups/digital-and-data-driven-agriculture-cop.html">Data-driven Digital Agriculture</a> team at the World Bank, the <a href="https://bfi.uchicago.edu/development-innovation-lab/">Development Innovation Lab</a> (DIL) at UChicago under Nobel laureate <a href="https://economics.uchicago.edu/directory/michael-kremer">Michael Kremer</a>, the <a href="https://www.rockefellerfoundation.org/">Rockefeller Foundation</a>'s Data Science Team, and the <a href="https://cega.berkeley.edu/">Center for Effective Global Action</a> (CEGA) at UC Berkeley.
+  Currently with the Innovation Lab at <a href="https://www.consumerreports.org/">Consumer Reports</a>, previously with the <a href="https://collaboration.worldbank.org/content/sites/collaboration-for-development/en/groups/digital-and-data-driven-agriculture-cop.html">Data-driven Digital Agriculture</a> team at the World Bank, the <a href="https://bfi.uchicago.edu/development-innovation-lab/">Development Innovation Lab</a> (DIL) at UChicago under Nobel laureate <a href="https://economics.uchicago.edu/directory/michael-kremer">Michael Kremer</a>, the <a href="https://www.rockefellerfoundation.org/">Rockefeller Foundation</a>'s Data Science Team, and the <a href="https://cega.berkeley.edu/">Center for Effective Global Action</a> (CEGA) at UC Berkeley.
   
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
